# warsztat-gold

./: .gitignore  bump_version.js  index.html  install.bat  package-lock.json  package.json  printview.html  runbuild.bat  rundev.bat  test.db3  test2.db3  todo.txt  todo_notes.txt  upload.js  vite.config.js
mdb/: .gitignore  analyze_date.js  datetime_investigation.txt  mdb_structure.json  mdb_structure.sql  mdb_structure_sqlite.sql  mdb_structure_sqlite_v2.sql  parse_mdb_json_to_js.js  parse_mdb_json_to_sqlite.js  parse_mdb_sql_to_json.js  parse_sql_mdb_structure.js  reimport_compare.js  reimport_investigation.txt  structure_type_imports.js  vba_macros_backup.txt
mdb/reimport_specification_headers/: pracownicy.txt  zlecenia instalacji gazowej.txt
src/: App.vue  ClosePrevention.js  FormManager.js  QueryManager.js  ReactiveFormValues.js  ScrollerState.js  SimpleSrollerState.js  WinBox.css  api_fetcher.js  contextmenu.js  ipc.js  main.js  mainWindow.js  main_print.js  print.css  styles.css  utils.js
src-tauri/: .gitignore  Cargo.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/resources/: test.txt
src-tauri/resources/sqlite/: database_structure.sql  main_tables.txt
src-tauri/src/: backup.rs  encoding.rs  main.rs  sqlite_manager.rs  test_greet.rs  test_sqlite.rs  utils.rs
src/DBStructure/: api.js  db_warsztat_structure.js  db_warsztat_structure_impl.js  db_warsztat_tables.js
src/Forms/: CommonSql.js  FormCommon.js  Klienci.vue  NazwyCzesci.vue  SamochodyKlientow.vue  ZleceniaNaprawy.vue  ZleceniaNaprawyAdv.vue  ZleceniaNaprawy_Czesci.vue  ZyskSummary.vue  (+1 more)
(+78 files in other folders)
