[package]
name = "warsztat-gold"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "window-close", "clipboard-write-text", "clipboard-read-text", "fs-exists", "fs-create-dir", "dialog-all", "devtools", "dialog"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29.0", features = ["bundled", "backup", "load_extension", "vtab"] }
rand = "0.8.5"
oem_cp = "2.0.0"
encoding_rs = "0.8.6"
tauri-plugin-context-menu = "0.8.0"
regex = "1.11.1"
tempfile = "3.14.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.51", features = ["Win32_Storage_FileSystem"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
